freemed project changelog
($Id$)

* Tue May 01 2001 fforest
  - removed modules/intake.emr.report
  - added modules/intake.emr_report
  - change manage.php to load .emr_report
  - API.php fix display_itemlist to handle paging
    correclty when called from a module by pulling from
    REQUEST_URI
  - new fixedform default data updates to intake report
  - intake.emr_reports module. add code to print the 
    facility info header.

* Mon Apr 30 2001 rufustfirefly
  - manage_bills.php: moved this module to old
  - modules/unpaid_procs.report.module.php: committed changes from
    manage_bills.php (including one SQL error fix)
  - select_printers.php3, simplerep*.php3: moved to old, since they are
    very stale
  - db-update-0.1to0.2, freemed.db.mysql, incoming_fax_scripts.mk: moved
    to doc/
  - lib/module_emr.php: added xml_export() and xml_generate() methods for
    EMR module superclass, to allow EMR export. override xml_generate()
    function to return proper value
  - po/freemed.pot: alphebetized the entire catalog for easier editing,
    thanks to dr_gnu@ourexchange.net
  - lots of i18n fixes in the po template and in the modules directory.
    lots more to go, though. (payment.emr, patient_demographic.report
    done)

* Sun Apr 29 2001 rufustfirefly
  - manage_bills.php: fixed error in 1st SQL query, small optimizations

* Thu Apr 19 2001 fforest
  - data/EN/fixedform.EN.data now contains the intake report
  - README add httpd.conf requirement for Alias /tmp /bills
  - manage.php added code to load the new emr_report module
  - module_loader added include for module_emr_report.php
  - lib/error_handler added code to display box top and or 
    box bottom if needed
  - lib/module_* all check_vars functions changed to call trigger_error
    if missing variables or not authorized.
  - fixed_forms added new type EMR Report for fixedform fftype
  - modules/patient_coverage added more relationship types for guarantor